--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A modern vocabulary learning application built with React and Tailwind CSS",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@testing-library/dom": "^10.4.1",
