--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Vocabulary Assistant",
-  "name": "Vocabulary Assistant - Smart Language Learning",
+  "short_name": "Hizma",
+  "name": "Hizma - Smart Vocabulary Learning",
   "icons": [
     {
       "src": "favicon.ico",
